Align opnapi spec with DCM spec
